; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/vx/extr_vx_core.c_vx_test_irq_src.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/vx/extr_vx_core.c_vx_test_irq_src.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vx_core = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@CMD_TEST_IT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vx_core*, i32*)* @vx_test_irq_src to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vx_test_irq_src(%struct.vx_core* %0, i32* %1) #0 {
  %3 = alloca %struct.vx_core*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.vx_core* %0, %struct.vx_core** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.vx_core*, %struct.vx_core** %3, align 8
  %7 = getelementptr inbounds %struct.vx_core, %struct.vx_core* %6, i32 0, i32 1
  %8 = load i32, i32* @CMD_TEST_IT, align 4
  %9 = call i32 @vx_init_rmh(%struct.TYPE_3__* %7, i32 %8)
  %10 = load %struct.vx_core*, %struct.vx_core** %3, align 8
  %11 = getelementptr inbounds %struct.vx_core, %struct.vx_core* %10, i32 0, i32 0
  %12 = call i32 @spin_lock(i32* %11)
  %13 = load %struct.vx_core*, %struct.vx_core** %3, align 8
  %14 = load %struct.vx_core*, %struct.vx_core** %3, align 8
  %15 = getelementptr inbounds %struct.vx_core, %struct.vx_core* %14, i32 0, i32 1
  %16 = call i32 @vx_send_msg_nolock(%struct.vx_core* %13, %struct.TYPE_3__* %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = load i32*, i32** %4, align 8
  store i32 0, i32* %20, align 4
  br label %29

21:                                               ; preds = %2
  %22 = load %struct.vx_core*, %struct.vx_core** %3, align 8
  %23 = getelementptr inbounds %struct.vx_core, %struct.vx_core* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32*, i32** %4, align 8
  store i32 %27, i32* %28, align 4
  br label %29

29:                                               ; preds = %21, %19
  %30 = load %struct.vx_core*, %struct.vx_core** %3, align 8
  %31 = getelementptr inbounds %struct.vx_core, %struct.vx_core* %30, i32 0, i32 0
  %32 = call i32 @spin_unlock(i32* %31)
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @vx_init_rmh(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @vx_send_msg_nolock(%struct.vx_core*, %struct.TYPE_3__*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
